# pyTGA

./: .flake8  .gitignore  .readthedocs.yml  CHANGELOG.md  README.md  example_Notebook.ipynb  parsing.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: coverage-badge.yml  create-release.yml  publish-pypi.yml  publish-testpypi.yml  python-package.yml  test.yml
docs/source/: API Reference.rst  citing.rst  conf.py  contributing.rst  contributors.rst  examples.rst  index.rst  installation.rst  manual.rst  modules.rst  overview.md  papers.rst  pyTGA.rst  quickstart.rst  references.bib  requirements.txt  usage.rst
docs/source/_static/: custom.css
docs/source/notebooks/: 2_stage_example.ipynb  Methane_pyrolysis.ipynb  example_Notebook.ipynb  parsing.ipynb  plastic_cracking.ipynb
example_data/: Methane_Pyrolysis.txt  PVC.txt  blank_test_MT.txt  burnoff_example.txt  burnoff_example_ANSI.txt  stage_split_example.csv
example_data/manufacturers/: MT_example_file.txt  MettlerToledo_example_file.txt  PE_example_file.txt  TAInstruments_example_file.txt  TA_instrument_excel.xls  netzsch_example3.txt
pyTGA/: __init__.py  pyTGA.py
tests/: test_pyTGA.py
